--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="Images/me.jpg" alt="" width="450" height="570">
+            <img src="images/me.jpg" alt="" width="450" height="570">
         </div>
     </section>
 
