--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="Images/Others 2.jpg" alt="" height="770">
+            <img src="images/Others 2.jpg" alt="" height="770">
         </div>
 
         <div class="about-content">
