--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="home-content">
             <h3>Hello, I'm</h3>
             <h1>Christine Joy Quijano</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
+            <h3>And I'm a <span> BSIT STUDENT</span></h3>
             <p>To get an opportunity where I can make the best of my potential and contribute to the organization’s growth.
                  Seeking a position in a company where I can launch my career and build a valuable skill set. </p>
               <div class="social-media">
@@ -117,8 +117,6 @@
 
 
     <script src="https://unpkg.com/scrollreveal"></script>
-
-    <script src="http://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
     <script src="js/script.js"></script>
